Add image wiht HTHL

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body bgcolor="#48c9b0">
     <br>
     <br>
-   <center><h2>WELCOME TO HOME</h2></center>
+   <center><h2>WELCOME TO HOME</h2>
+   <img src = "imeges/images.jpg" width="500">
+    </center>
 </body>
 </html>
