--- a/login_form.html
+++ b/login_form.html
@@ -6,14 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="imeges/user_logo.png" width="120"
-    <label>Username</label>
-    <input type="email">
-    <label>Password</label>
-    <input type="password">
-    <button>Sign in</button><br>
+    <table border="0" align="center">
+        <tr> <td align="center"><img src="imeges/user_logo.png" alt> </td> </tr>
+        <!-- <tr> <td><label>Username</label> </td> </tr> -->
+        <tr> <td><input type="email" placeholder="user@mail.com"> </td> </tr>
+        <tr> <td><label>Password</label> </td> </tr>
+        <tr> <td><input type="password"> </td> </tr>
+        <tr> <td><button>Sign in</button><br> </td> </tr>
+	</table>
+
+    <center>
     <a href = "#">Sign up</a><br>
     <a href = "#">forgot password</a><br>
     <a href = "#">term and conditions</a><br>
+    <img src = "imeges/fece_logo.png" width="50">
+    <img src="imeges/cromo.png" width="40">
+    <img src="imeges/twiter.png" width="40"><br>
+</center>
 </body>
 </html>
