--- a/login_form.html
+++ b/login_form.html
@@ -6,13 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <form name="login-form" action="file:///C:/Users/Estudiantes/Documents/Alfa/table1.html" method="post">
+
+
     <table border="0" align="center">
         <tr> <td align="center"><img src="imeges/user_logo.png" alt> </td> </tr>
         <!-- <tr> <td><label>Username</label> </td> </tr> -->
-        <tr> <td><input type="email" placeholder="user@mail.com"> </td> </tr>
-        <tr> <td><label>Password</label> </td> </tr>
-        <tr> <td><input type="password"> </td> </tr>
-        <tr> <td><button>Sign in</button><br> </td> </tr>
+        <tr> <td align="center"><input type="email" placeholder="user@mail.com"> </td> </tr>
+        <!--<tr> <td><label>Password</label> </td> </tr> -->
+        <tr> <td align="center"><input type="password" placeholder="*********"> </td> </tr>
+        <tr> <td align="center"><button>Sign in</button><br> </td> </tr>
 	</table>
 
     <center>
@@ -23,5 +26,6 @@
     <img src="imeges/cromo.png" width="40">
     <img src="imeges/twiter.png" width="40"><br>
 </center>
+</form>
 </body>
 </html>
