--- a/table1.html
+++ b/table1.html
@@ -16,7 +16,7 @@
         </tr>
     </table><br><br>
     <table border="1" align="center">
-        <tr> <th>  <font color="red"> colors </font>  </th> </tr>
+        <tr> <th>  <font color="red"> colors </font>    <font color="red"></font>  </th> </tr>
         <tr> <th>  <font color="f0ec09"> Yellow </font> </th> </tr>  
         <tr> <th>  <font color="096bf0"> Blue </font> </th> </tr> 
         <tr> <th>  <font color="f00917"> Red </font> </th> </tr> 
